src/gestaoflex/adm-foundation/prd/k8s-deployment.yaml
# Deployment
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: gflex
  name: adm-foundation
  labels:
    app: adm-foundation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adm-foundation
  template:
    metadata:
      labels:
        app: adm-foundation
    spec:
      containers:
        - name: adm-foundation-container
          image: gestaoflex/adm-foundation:1.0.3
          ports:
            - containerPort: 3303
